tests/algorithms/transpiler/FS/data_structures/arrays/product_sum.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/arrays/product_sum.fs(35,34): error FS0001: The type 'obj' is not compatible with the type 'seq<'a>'
